--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,17 @@ uuid = "8e478641-e00c-4eaa-aa51-0267c65310b9"
 authors = ["Shane Kuei-Hsien Chu (skchu@wustl.edu)"]
 version = "1.0.0-DEV"
 
+[deps]
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
 [compat]
+CUDA = "5.9.4"
+ChainRulesCore = "1.26.0"
+Flux = "0.16.5"
+Random = "1.11.0"
 julia = "1.11.6"
 
 [extras]
