--- a/Project.toml
+++ b/Project.toml
@@ -8,12 +8,14 @@ CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 CUDA = "5.9.4"
 ChainRulesCore = "1.26.0"
 Flux = "0.16.5"
 Random = "1.11.0"
+Statistics = "1.11.1"
 julia = "1.11.6"
 
 [extras]
