--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "VeryBasicCNN2"
 uuid = "8e478641-e00c-4eaa-aa51-0267c65310b9"
-authors = ["Shane Kuei-Hsien Chu (skchu@wustl.edu)"]
 version = "1.0.0-DEV"
+authors = ["Shane Kuei-Hsien Chu (skchu@wustl.edu)"]
 
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
@@ -10,6 +10,7 @@ Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
 
 [compat]
 CUDA = "5.9.4"
@@ -18,6 +19,7 @@ Flux = "0.16.5"
 Random = "1.11.0"
 Statistics = "1.11.1"
 Zygote = "0.7.10"
+cuDNN = "1.4.6"
 julia = "1.11.6"
 
 [extras]
